force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/SVMXA360__EntitlementVerificationHistory__c.object-meta.xml
<CustomObject>
    <description>Stores complete entitlement verification history of Cases, Work Orders, and Return Orders.</description>
    <label>Entitlement Verification History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Entitlement Verification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entitlement Verification Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>