force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__AssetId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Asset record on which entitlement check is performed.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>EntitlementVerificationHistorys</relationshipName>
    <type>Lookup</type>
</CustomField>