force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__AssetWarrantyId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetWarrantyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the asset warranty resulted after performing an entitlement check.</description>
    <label>Asset Warranty</label>
    <referenceTo>AssetWarranty</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>Entitlement_Verification_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>