force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__BillingType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__BillingType__c</fullName>
    <description>How the service order expenses will be accounted for</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__BillingType</valueSetName>
    </valueSet>
</CustomField>