force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__CaseId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Case record on which the entitlement check is performed.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>EntitlementVerificationHistorys</relationshipName>
    <type>Lookup</type>
</CustomField>