force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__ContractLineItemId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContractLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the associated Contract Line Item.</description>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>Entitlement_Verification_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>