force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__EndDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EndDate__c</fullName>
    <description>The service coverage end date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>