force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__EntitledBy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledBy__c</fullName>
    <description>Lookup to User record performed entitlement check.</description>
    <label>Entitled By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
                <default>true</default>
                <label>Asset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>