force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__EntitledServiceId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the associated Entitlement Service.</description>
    <label>Entitled Service</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Entitlement Verification Histories (Entitlement Service)</relationshipLabel>
    <relationshipName>Entitlement_Verification_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>