force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__EntitlementDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementDate__c</fullName>
    <description>The Entitlement date on which the entitlement check is performed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entitlement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>