force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__EntitlementEngineNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementEngineNotes__c</fullName>
    <description>This field captures entitlement engine notes if any.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EntitlementEngineNotes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>