force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__EntitlementId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Entitlement resulted after performing an entitlement check.</description>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>EntitlementVerificationHistorys</relationshipName>
    <type>Lookup</type>
</CustomField>