force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__EntitlementNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementNotes__c</fullName>
    <description>Stores additional Entitlement notes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entitlement Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>