force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__MultipleCoverages__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MultipleCoverages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether multiple coverage is found when performing an entitlement check (True) or not (False).</description>
    <label>Multiple Coverages</label>
    <type>Checkbox</type>
</CustomField>