force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__MultipleEntitlement__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MultipleEntitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether multiple entitlement is found when performing an entitlement check (True) or not (False).</description>
    <label>Multiple Entitlement</label>
    <type>Checkbox</type>
</CustomField>