force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__ReturnOrderId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReturnOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Return Order record on which the entitlement check is performed.</description>
    <label>Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>EntitlementVerificationHistorys</relationshipName>
    <type>Lookup</type>
</CustomField>