force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__ServiceContractId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the service contract resulted after performing an entitlement check.</description>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>EntitlementVerificationHistorys</relationshipName>
    <type>Lookup</type>
</CustomField>