force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__TrackedAt__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TrackedAt__c</fullName>
    <description>The Entity specified here is considered to perform Entitlement check for.</description>
    <label>Tracked At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Parent Asset</fullName>
            </value>
            <value>
                <fullName>Root Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>