force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__VerificationMode__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__VerificationMode__c</fullName>
    <description>Indicates how entitlement check is performed.</description>
    <label>Verification Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>