force-app/main/default/objects/SVMXA360__EntitlementVerificationHistory__c/fields/SVMXA360__WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the work order record on which the Entitlement check is performed.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Entitlement Verification Histories</relationshipLabel>
    <relationshipName>EntitlementVerificationHistorys</relationshipName>
    <type>Lookup</type>
</CustomField>